# win-fuzzy-hashing

./: CMakeLists.txt  README.md
win_fuzzy_hashing/src/: fuzzy.c
win_fuzzy_hashing_unittest/src/: fuzzy_unittest.cpp  stdafx.cpp  win_fuzzy_hashing_unittest.cpp
